--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "react-scripts build",
     "lint": "eslint ./ --ext ts,tsx",
     "lint:fix": "eslint ./ --ext ts,tsx --fix",
-    "test": "react-scripts test",
+    "test:cra-jest": "react-scripts test",
+    "test:jest": "jest",
     "eject": "react-scripts eject"
   },
   "dependencies": {
@@ -20,12 +21,18 @@
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.0.0",
     "@testing-library/user-event": "13.1.9",
+    "@types/jest": "26.0.24",
     "@types/react": "17.0.11",
     "@types/react-dom": "17.0.8",
+    "@types/react-test-renderer": "17.0.1",
     "@typescript-eslint/eslint-plugin": "4.28.0",
     "@typescript-eslint/parser": "4.28.0",
     "eslint": "7.29.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "26.6.0",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "17.0.2",
+    "ts-jest": "26.5.6",
     "typescript": "4.3.4",
     "web-vitals": "2.0.1"
   },
@@ -40,5 +47,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "ts-jest"
+    },
+    "moduleNameMapper": {
+      ".+\\.(css|styl|less|sass|scss)$": "identity-obj-proxy",
+      ".+\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/file-mock.js"
+    }
   }
 }
