--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint ./ --ext ts,tsx",
     "lint:fix": "eslint ./ --ext ts,tsx --fix",
     "test:cra-jest": "react-scripts test",
-    "test:jest": "jest",
+    "test:jest": "jest --testEnvironment jsdom",
     "eject": "react-scripts eject"
   },
   "dependencies": {
@@ -21,18 +21,18 @@
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.0.0",
     "@testing-library/user-event": "13.1.9",
-    "@types/jest": "26.0.24",
+    "@types/jest": "27.0.3",
     "@types/react": "17.0.11",
     "@types/react-dom": "17.0.8",
     "@types/react-test-renderer": "17.0.1",
-    "@typescript-eslint/eslint-plugin": "4.28.0",
-    "@typescript-eslint/parser": "4.28.0",
-    "eslint": "7.29.0",
+    "@typescript-eslint/eslint-plugin": "5.7.0",
+    "@typescript-eslint/parser": "5.7.0",
+    "eslint": "8.4.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "26.6.0",
-    "react-scripts": "4.0.3",
+    "jest": "27.4.5",
+    "react-scripts": "5.0.0",
     "react-test-renderer": "17.0.2",
-    "ts-jest": "26.5.6",
+    "ts-jest": "27.1.1",
     "typescript": "4.3.4",
     "web-vitals": "2.0.1"
   },
